force-app/main/default/objects/sfLma__Package__c/fields/sfLma__Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Developer_Name__c</fullName>
    <label>Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>