force-app/main/default/objects/sfLma__Package__c/fields/sfLma__Developer_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Developer_Org_ID__c</fullName>
    <label>Developer Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>