force-app/main/default/objects/sfLma__Package__c/fields/sfLma__Help__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Help__c</fullName>
    <formula>(HYPERLINK(&quot;http://www.salesforce.com/docs/en/lma/index_CSH.htm#lma_package_detail.htm&quot;, &quot;Help for Packages&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
    <label>Help</label>
    <type>Text</type>
</CustomField>