force-app/main/default/objects/sfLma__Package__c/fields/sfLma__Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Latest_Version__c</fullName>
    <label>Latest Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>