force-app/main/default/objects/sfLma__Package__c/fields/sfLma__Next_Available_Refresh__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Next_Available_Refresh__c</fullName>
    <formula>sfLma__Last_License_Refresh__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Available Refresh</label>
    <type>Date</type>
</CustomField>