force-app/main/default/objects/sfLma__Package__c/fields/sfLma__Package_ID__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Package_ID__c</fullName>
    <label>Package ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>