force-app/main/default/objects/sfLma__Package__c/fields/sfLma__Release_Date__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Release_Date__c</fullName>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>