force-app/main/default/objects/sfLma__Package__c/listViews/sfLma__All.listView-meta.xml
<ListView>
    <fullName>sfLma__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>